--- a/references.bib
+++ b/references.bib
@@ -4,3 +4,10 @@
 @misc{navarro_2017, title={Understanding the data partitioning technique}, url={https://www.datio.com/iaas/understanding-the-data-partitioning-technique/}, journal={Datio}, author={Navarro, Álvaro}, year={2017}, month={2}}
 @article{spark_2010, title={Spark: Cluster Computing with Working Sets}, url={http://people.csail.mit.edu/matei/papers/2010/hotcloud_spark.pdf}, author={Zaharia, Matei and Chowdhury, Mosharaf and Franklin, Michael J. and Shenker, Scott and Stoica, Ion}, year={2010}} 
 @article{rdd_2012, title={Resilient Distributed Datasets: A Fault-Tolerant Abstraction for In-Memory Cluster Computing}, url={http://people.csail.mit.edu/matei/papers/2012/nsdi_spark.pdf}, author={Zaharia, Matei and Chowdhury, Mosharaf and Das, Tathagata and Dave, Ankur and Ma, Justin and McCauley, Murphy and Franklin, Michael J. and Shenker, Scott and Stoica, Ion}, year={2012}} 
+@misc{team_2021, title={Why and how companies need to take advantage of (BIG) data science}, url={https://exafutures.com/en/why-how-companies-need-to-take-advantage-of-big-data-science}, journal={Exa Futures}, year={2021}, month={9}}
+@misc{maguire_2023, title={Top 16 cloud service providers and companies in 2023}, url={https://www.datamation.com/cloud/cloud-service-providers/}, journal={Datamation}, author={Maguire, James}, year={2023}, month={1}} 
+@misc{aws_ec2, title={Amazon EC2:  Secure and resizable compute capacity for virtually any workload}, url={https://aws.amazon.com/ec2/},publisher={Amazon Web Services, Inc}} 
+@misc{aws_lambda, title={AWS Lambda:  Run code without thinking about servers or clusters}, url={https://aws.amazon.com/lambda/},publisher={Amazon Web Services, Inc}}
+@misc{aws_rekognition, title={Amazon Rekognition:  Automate your image and video analysis with machine learning}, url={https://aws.amazon.com/rekognition/},publisher={Amazon Web Services, Inc}} 
+@misc{stack_ex, title={Stack exchange}, url={https://stackexchange.com/}, journal={Hot Questions - Stack Exchange}} 
+@misc{stack_beer, url={https://data.stackexchange.com/beer/queries}, journal={Stack Exchange Data Explorer}} 
